package com.example.backend.ai;

public enum Archetype {
    PHYSICAL_BRAWLER,    // goblinWarrior
    MAGIC_CASTER,        // goblinMage
    MAGIC_DRAINER,       // witch
    PHYSICAL_SKIRMISHER, // giantSpider
    BALANCED_TANK        // dragon
}
