package com.example.backend.ai;

public enum BehaviorType {
    PHYSICAL_SPAMMER,
    COMBO_PLAYER
}
