package com.example.backend.ai;

public enum MoveCategory {
    DAMAGE_PHYSICAL,
    DAMAGE_MAGIC,
    HEAL,
    SELF_BUFF,
    ENEMY_DEBUFF,
    DRAIN
}
