package com.example.backend.ai;

public enum ResourceStatusType {
    STARVED
}
