package com.example.backend.ai;

public enum Severity {
    LOW, MEDIUM, HIGH
}
