package com.example.backend.ai;

public enum StatComparisonType {
    PLAYER_PHYSICAL_DOMINATES,
    PLAYER_MAGIC_DOMINATES
}
