package com.example.backend.ai;

public enum TacticType {
    MAXIMIZE_DAMAGE,
    SELF_BUFF,
    DEBUFF_PLAYER,
    CONSERVATIVE,
    DRAIN
}
