package com.example.backend.ai;

public enum ThreatLevel {
    LOW, MEDIUM, HIGH, CRITICAL
}
